# personal-loan-advisor-agent

./: .env.example  .gitignore  DATA_SETUP.md  DEPLOYMENT.md  EVALUATION_GUIDE.md  LOGGING_GUIDE.md  Procfile  QUICK_START.md  README.md  README_DEMO.md  SETUP_MONGODB.md  TEST_SUMMARY.md  chat.py  docker-compose.yml  main.py  nixpacks.toml  pyproject.toml  pytest.ini  requirements.txt  simple_demo.py  test_agent_tools.py
docs/: CLEANUP_SUMMARY.md  CONTEXT_RECONSTRUCTION.md  DEEPEVAL_TESTS_COMPARISON.md  EVALUATION_GUIDE.md  EVALUATION_THRESHOLDS.md  LEARNING_PATH_NUMPY_FINANCIAL.md  MODEL_CONFIGURATION.md  MODEL_CONFIG_SUMMARY.md  MONGODB_CONFIG.md  PROJECT_STRUCTURE.md  REFACTORING_PLAN.md
evaluation/: context_reconstructor.py  evaluation_framework.py  live_eval_agent.py  mongodb_storage.py
examples/: config_usage_demo.py  logger_demo.py
notebooks/: 01_loan_data_eda.ipynb  deepeval_loan_advisor_evaluation.ipynb  langchain_tools.py
scripts/: analyze_agent_behavior.py  check_config.py  download_data.py  run_evaluation.py  view_evaluations.py
src/: __init__.py
tests/: IMPLEMENTATION_NOTES.md  README.md  README_EVALUATION.md  README_TESTS.md  SUMMARY.md  __init__.py  deepeval_config.py  test_agent_integration.py  test_agent_properties.py  test_conversation_memory.py  test_evaluation.py  test_loan_advisor_agent.py  test_loan_calculator.py  test_loan_calculator_extended.py  test_loan_calculator_simple.py  test_loan_eligibility.py  test_loan_eligibility_simple.py  test_loan_rules.py  test_logger.py  test_output_formatter.py  test_response_models.py
(+19 files in other folders)
