[project]
name = "personal-loan-advisor-agent"
version = "0.1.0"
description = "AI-powered Personal Loan Advisory Agent with ML-based credit scoring and evaluation"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.2.13",
    "openai>=1.12.0",
    "xgboost>=2.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",
    "deepeval>=0.21.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "numpy-financial>=1.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pymongo>=4.6.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
